# rental_price_mlops_ccds

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml
data/raw/: .gitignore
references/: model_results.md
rental_price_mlops/: __init__.py  dataset.py  features.py  plots.py
rental_price_mlops/api/: main.py  schemas.py  service.py  storage.py
rental_price_mlops/modeling/: evaluate.py  predict.py  train.py  train_catboost.py
reports/: data_prep_summary.json
tests/: test_api_import.py
