[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rental_price_mlops"
version = "0.0.1"
description = "MLOps system for rental price prediction"
authors = [
  { name = "KShuvalova" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["rental_price_mlops"]
include = ["pyproject.toml", "rental_price_mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rental_price_mlops"]
force-sort-within-sections = true

